Revert "(DSG): generated app: update admin-ui readme file"
This reverts commit 1a7cafceca996b8c4680d84a62ab535bff4f15dc.

--- a/packages/amplication-data-service-generator/src/admin/static/package.json
+++ b/packages/amplication-data-service-generator/src/admin/static/package.json
@@ -23,8 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "docker:build": "docker build ."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
