--- a/helm/charts/infra/values.yaml
+++ b/helm/charts/infra/values.yaml
@@ -2,3 +2,56 @@ pvc:
   name: efs-claim
   storageRequest: 1Gi
   storageName: efs-sc
+
+postgres:
+  install: true
+  postgresqlPassword: postgres
+  postgresqlPostgresPassword: postgres
+  postgresqlDatabase: amplication
+  fullnameOverride: postgresql
+
+cp-helm-charts:
+  enabled: true
+  cp-kafka:
+    enabled: true
+    image: confluentinc/cp-enterprise-kafka
+    imageTag: 6.1.0
+    prometheus:
+      jmx:
+        enabled: true
+    podAnnotations:
+      cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+    configurationOverrides:
+      "default.replication.factor": "1"
+      "min.insync.replicas": "1"
+      "auto.create.topics.enable": "true"
+      "offsets.topic.replication.factor": "1"
+      "confluent.metrics.reporter.topic.replicas": "1"
+    resources: {}
+    heapOptions: "-Xms512M -Xmx512M"
+    tolerations:
+      - key: "kafka"
+        operator: "Equal"
+        value: "true"
+    brokers: 1
+    persistence:
+      enabled: true
+      size: 5Gi
+  cp-zookeeper:
+    enabled: true
+    servers: 1
+    image: confluentinc/cp-zookeeper
+    imageTag: 6.1.0
+    heapOptions: "-Xms512M -Xmx512M"
+    persistence:
+      enabled: true
+  cp-schema-registry:
+    enabled: false
+  cp-kafka-rest:
+    enabled: false
+  cp-kafka-connect:
+    enabled: false
+  cp-control-center:
+    enabled: false
+  cp-ksql-server:
+    enabled: false
