--- a/.dockerignore
+++ b/.dockerignore
@@ -16,6 +16,8 @@ packages/amplication-data-service-generator/generated
 
 
 **/node_modules
+*.md
+**/*.md
 *.yaml
 **/*.yaml
 
@@ -25,3 +27,5 @@ packages/**/lib
 
 **/*.spec.ts
 **/*.mock.ts
+
+!packages/amplication-data-service-generator/**/**/static
