--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,3 @@
-!packages/amplication-data-service-generator/**/static
 .git
 .github
 .vscode
@@ -28,3 +27,5 @@ packages/**/lib
 
 **/*.spec.ts
 **/*.mock.ts
+
+!packages/amplication-data-service-generator/**/static/**
