--- a/.dockerignore
+++ b/.dockerignore
@@ -28,5 +28,4 @@ packages/**/lib
 **/*.spec.ts
 **/*.mock.ts
 
-!packages/amplication-data-service-generator/src/server/static/*.md
-!packages/amplication-data-service-generator/src/admin/static/*.md
+!packages/amplication-data-service-generator/src/**/static/*.md
