--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -1,12 +1,6 @@
-cp-helm-charts:
-  enabled: false
-  cp-kafka:
-    enabled: false
-  cp-zookeeper:
-    enabled: false
-
-postgres:
-  install: false
+global:
+  pvc:
+    name: staging-efs-claim
 
 amplication-client:
   service:
@@ -129,3 +123,13 @@ amplication-storage-gateway:
       KAFKA_BROKERS: '["b-1.amplicationuseast1sta.2590lk.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.2590lk.c22.kafka.us-east-1.amazonaws.com:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "195638"
+
+infra:
+  cp-helm-charts:
+    enabled: false
+    cp-kafka:
+      enabled: false
+    cp-zookeeper:
+      enabled: false
+  postgres:
+    install: false
