--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -1,17 +1,16 @@
-cp-helm-charts:
-  enabled: true
-  cp-kafka:
-    enabled: true
-  cp-zookeeper:
-    enabled: true
+global:
+  pvc:
+    name: shimi-efs-claim
 
-postgres:
-  install: true
-  postgresqlPassword: postgres
-  postgresqlPostgresPassword: postgres
-  postgresqlDatabase: amplication
-  fullnameOverride: postgresql
-
+infra:
+  cp-helm-charts:
+    enabled: true
+    cp-kafka:
+      enabled: true
+    cp-zookeeper:
+      enabled: true
+  postgres:
+    install: true
 
 amplication-client:
   service:
@@ -29,8 +28,6 @@ amplication-server:
   ingress:
     enabled: true
     hostname: server-shimi.amplication-dev.com
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
 
@@ -89,8 +86,6 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   postgres:
     install: false
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -111,8 +106,6 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
@@ -125,8 +118,6 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server-shimi.amplication-dev.com
-  pvc:
-    name: shimi-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
