--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -1,12 +1,16 @@
-cp-helm-charts:
-  enabled: false
-  cp-kafka:
-    enabled: false
-  cp-zookeeper:
-    enabled: false
+global:
+  pvc:
+    name: staging-os-efs-claim
 
-postgres:
-  install: false
+infra:
+  cp-helm-charts:
+    enabled: false
+    cp-kafka:
+      enabled: false
+    cp-zookeeper:
+      enabled: false
+  postgres:
+    install: false
 
 amplication-client:
   service:
@@ -25,15 +29,12 @@ amplication-server:
   ingress:
     enabled: true
     hostname: server.staging-os.amplication-dev.com
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       HOST: "https://server.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
       #KAFKA
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
@@ -85,8 +86,6 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   postgres:
     install: false
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -108,24 +107,20 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "195638"
 
 amplication-storage-gateway:
   ingress:
     hostname: server.staging-os.amplication-dev.com
-  pvc:
-    name: staging-os-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "195638"
+
