--- a/helm/charts/services/amplication-storage-gateway/values.yaml
+++ b/helm/charts/services/amplication-storage-gateway/values.yaml
@@ -36,7 +36,9 @@ ingress:
   hostname: server.amplication.com
   path: /storage
 
-pvc:
-  storageRequest: 1Gi
-  name: efs-claim
-  storageName: efs-sc
+infra:
+  enabled: false
+
+global:
+  pvc:
+    name: efs-claim
