--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -1,12 +1,6 @@
-cp-helm-charts:
-  enabled: false
-  cp-kafka:
-    enabled: false
-  cp-zookeeper:
-    enabled: false
-
-postgres:
-  install: false
+global:
+  pvc:
+    name: prod-efs-claim
 
 amplication-client:
   service:
@@ -29,8 +23,6 @@ amplication-server:
     requests:
       cpu: 3
       memory: 6Gi
-  pvc:
-    name: prod-efs-claim
   postgres:
     install: false
   ingress:
@@ -46,7 +38,6 @@ amplication-server:
       DISABLE_EVENT_TRACKING: "1"
 
       #KAFKA
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
@@ -99,8 +90,6 @@ amplication-git-push-webhook-service:
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
 
 amplication-git-pull-service:
-  pvc:
-    name: prod-efs-claim
   postgres:
     install: false
   config:
@@ -125,15 +114,12 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: prod-efs-claim
   config:
     env:
       #KAFKA
       KAFKA_BROKERS: '["b-1.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplication-useast1-p.w0qvj0.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
 
       #EFS
       BASE_BUILDS_FOLDER: /amplication-data/build-data
@@ -144,8 +130,6 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server.amplication.com
-  pvc:
-    name: prod-efs-claim
   config:
     env:
       #KAFKA
@@ -156,3 +140,13 @@ amplication-storage-gateway:
 
       #GitHub App
       GITHUB_APP_APP_ID: "176701"
+
+infra:
+  cp-helm-charts:
+    enabled: false
+    cp-kafka:
+      enabled: false
+    cp-zookeeper:
+      enabled: false
+  postgres:
+    install: false
