--- a/helm/charts/infra/Chart.yaml
+++ b/helm/charts/infra/Chart.yaml
@@ -1,20 +1,22 @@
 apiVersion: v2
-name: amplication-server
-description: A Helm chart for the amplication-server component of Amplication.
+name: infra
+description: A Helm chart for common shared infrastructure resources.
 
 dependencies:
+- name: base
+  version: "0.1.0"
+  repository: "file://../base"
+
 - name: postgresql
   alias: postgres
   version: "10.16.2"
   repository: "https://charts.bitnami.com/bitnami"
   condition: postgres.install
-- name: base
-  version: "0.1.0"
-  repository: "file://../../base"
-- name: infra
-  version: "0.1.0"
-  repository: "file://../../infra" 
-  condition: infra.enabled 
+
+- name: cp-helm-charts
+  version: "0.6.1"
+  repository: "https://confluentinc.github.io/cp-helm-charts/"
+  condition: cp-helm-charts.enabled
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
