--- a/helm/charts/amplication/values-amit.yaml
+++ b/helm/charts/amplication/values-amit.yaml
@@ -1,16 +1,6 @@
-cp-helm-charts:
-  enabled: true
-  cp-kafka:
-    enabled: true
-  cp-zookeeper:
-    enabled: true
-
-postgres:
-  install: true
-  postgresqlPassword: postgres
-  postgresqlPostgresPassword: postgres
-  postgresqlDatabase: amplication
-  fullnameOverride: postgresql
+global:
+  pvc:
+    name: amit-efs-claim
 
 amplication-client:
   service:
@@ -28,8 +18,6 @@ amplication-server:
   ingress:
     enabled: true
     hostname: server-amit.amplication-dev.com
-  pvc:
-    name: amit-efs-claim
   config:
     env:
       HOST: "https://server-amit.amplication-dev.com"
@@ -87,8 +75,6 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   postgres:
     install: false
-  pvc:
-    name: amit-efs-claim
   config:
     env:
       NODE_ENV: "production"
@@ -109,8 +95,6 @@ amplication-git-pull-service:
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
 amplication-git-pull-request-service:
-  pvc:
-    name: amit-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-amit-cp-kafka-headless:9092"]'
@@ -123,8 +107,6 @@ amplication-git-pull-request-service:
 amplication-storage-gateway:
   ingress:
     hostname: server-amit.amplication-dev.com
-  pvc:
-    name: amit-efs-claim
   config:
     env:
       KAFKA_BROKERS: '["amplication-amit-cp-kafka-headless:9092"]'
