--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -2,6 +2,16 @@ global:
   pvc:
     name: shimi-efs-claim
 
+infra:
+  cp-helm-charts:
+    enabled: true
+    cp-kafka:
+      enabled: true
+    cp-zookeeper:
+      enabled: true
+  postgres:
+    install: true
+
 amplication-client:
   service:
     hostname: app-shimi.amplication-dev.com
