add confirmation input + condition

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -15,9 +15,17 @@ on:
         - shimi
         - mor
         - amit
-jobs:
+      confirm-env:
+        type: string
+        description: Confirm the environment to deploy
+        required: true
+        default: staging-os
+
+
+jobs:          
   prepare:
     runs-on: ubuntu-18.04
+    if: ${{ github.event.inputs.target-env }} == ${{ github.event.inputs.confirm-env }}
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
     steps:
