--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -1,6 +1,9 @@
 global:
   pvc:
     name: staging-efs-claim
+  pv:
+    name: efs-pv-staging
+    handle: fs-0a87872138ddc7f6d::fsap-0369ff368700f58c3
 
 amplication-client:
   service:
