test service-type for postgres

--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -4,6 +4,12 @@ global:
   pv:
     name: efs-pv-shimi
 
+postgres:
+  primary:
+    service:
+      annotations:
+        external-dns.alpha.kubernetes.io/hostname: postgres-shimi.staging-os.amplication-dev.com
+
 amplication-client:
   service:
     hostname: app-shimi.amplication-dev.com
