try with different protocol

--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -5,9 +5,10 @@ global:
     name: efs-pv-shimi
 
 postgres:
-  service:
-    annotations:
-      external-dns.alpha.kubernetes.io/hostname: postgres-shimi.amplication-dev.com
+  primary:
+    service:
+      annotations:
+        external-dns.alpha.kubernetes.io/hostname: postgres-shimi.amplication-dev.com
 
 amplication-client:
   service:
