--- a/helm/charts/amplication/values-mor.yaml
+++ b/helm/charts/amplication/values-mor.yaml
@@ -6,33 +6,21 @@ global:
 
 amplication-client:
   service:
-    hostname: app-mor.amplication-dev.com
+    hostname: app-custom.amplication-dev.com
   config:
     env:
-      REACT_APP_SERVER_URI: "https://server-mor.amplication-dev.com"
-      REACT_APP_DATA_SOURCE: "https://server-mor.amplication-dev.com/graphql"
-      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-mor.amplication-dev.com/github"
-      REACT_APP_STORAGE_GATEWAY_URL: https://server-mor.amplication-dev.com
+      REACT_APP_DATA_SOURCE: "https://server-custom.amplication-dev.com/graphql"
+      REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-custom.amplication-dev.com/github"
+      REACT_APP_GITHUB_CLIENT_ID: value
 
 amplication-server:
-  postgres:
-    install: false
   ingress:
-    enabled: true
-    hostname: server-mor.amplication-dev.com
+    hostname: server-custom.amplication-dev.com
   config:
     env:
-      HOST: "https://server-mor.amplication-dev.com"
-      CLIENT_HOST: "https://app-mor.amplication-dev.com"
 
-      #KAFKA
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["amplication-mor-cp-kafka-headless:9092"]'
-      KAFKA_CLIENT_ID: amplication-server
-      KAFKA_GROUP_ID: amplication-server-group
-
-      #EFS
-      BASE_BUILDS_FOLDER: /amplication-data/build-data
+      HOST: "https://server-custom.amplication-dev.com"
+      CLIENT_HOST: 'https://app-custom.amplication-dev.com'
 
       #GCP - APPS Builder
 
@@ -53,19 +41,17 @@ amplication-server:
       DOCKER_HOST: tcp://docker:2375
 
       #GitHub App
-      GITHUB_APP_APP_ID: "215215"
-      GITHUB_APP_CLIENT_ID: "Iv1.a8ac08d4d3788314"
-      GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/mor-app/installations/new?state={state}"
+      GITHUB_APP_APP_ID: "195638"
+      GITHUB_APP_CLIENT_ID: "Iv1.7c4ec6671b7c8cd7"
+      GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/amplicaiton-server-staging-os/installations/new?state={state}"
 
       #GitHub OAuth App
-      GITHUB_CLIENT_ID: "e37477c7b7acc2663fea"
-      GITHUB_REDIRECT_URI: "https://server-mor.amplication-dev.com/github/callback"
-
+      GITHUB_CLIENT_ID: "aa4d2f3ccd7d47cbbf71"
+      GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
+      GITHUB_REDIRECT_URI: "https://server-custom.amplication-dev.com/github/callback"
+      
 amplication-git-push-webhook-service:
-  postgres:
-    install: false
   ingress:
-    enabled: true
     hostname: webhook-mor.amplication-dev.com
   config:
     env:
@@ -75,8 +61,6 @@ amplication-git-push-webhook-service:
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
 
 amplication-git-pull-service:
-  postgres:
-    install: false
   config:
     env:
       NODE_ENV: "production"
