--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -16,8 +16,14 @@ on:
         - mor
         - amit
         - alex
+      confirm-env:
+        type: string
+        description: Confirm the environment to deploy
+        required: true
+        default: staging-os
 jobs:
   prepare:
+    if: github.event.inputs.target-env == github.event.inputs.confirm-env
     runs-on: ubuntu-18.04
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
