add script for validation

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -17,8 +17,26 @@ on:
         - amit
         - alex
 jobs:
+  validate-image:
+    runs-on: ubuntu-18.04
+    outputs: 
+      valid_image: ${{ steps.check-image.outputs.image_exist }}
+    steps:  
+      - name: configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: check if image exist
+        id: check-image
+        run: |
+          BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")
+          bash ./.github/workflows/scripts/deploy-valid-image.sh
   prepare:
     runs-on: ubuntu-18.04
+    needs: [validate-image]
+    if: ${{ needs.validate-image.outputs.image_exist == 'true' }}
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
     steps:
@@ -51,14 +69,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      # - name: install kubectl
-      #   run: |
-      #     sudo apt-get install -y curl awscli && curl -LO https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
       - name: set branch-name
         run: |
           echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
-        env:
-          SOURCE_BRANCH_NAME: ${{ github.event.inputs.source-branch }}
       - name: calculate docker tags
         id: calculate-docker-tags
         run: |
