try with checkout

--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -22,6 +22,7 @@ jobs:
     outputs: 
       valid_image: ${{ steps.check-image.outputs.image_exist }}
     steps:  
+      - uses: actions/checkout@v2
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
