--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -7,31 +7,32 @@ on:
         description: To which environment to deploy
         default: staging-os
         required: true
-        options: 
-        - staging-os
-        - staging
-        - prod
-        - custom
-        - shimi
-        - mor
-        - amit
+        options:
+          - staging-os
+          - staging
+          - prod
+          - custom
+          - shimi
+          - mor
+          - amit
+          - ariel
 jobs:
   prepare:
     runs-on: ubuntu-18.04
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
     steps:
-    - name: create secret names
-      id: create-secret-names
-      run: |
-        export TARGET_ENV=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
-        if [ "$TARGET_ENV" = "PROD" ] || [ "$TARGET_ENV" = "STAGING" ]; then
-          echo "::set-output name=ARGOCD::AWS_${TARGET_ENV}_ARGOCD"
-        else
-          echo "::set-output name=ARGOCD::AWS_STAGING_OS_ARGOCD"
-        fi
-      env:
-        TARGET_ENV: ${{ github.event.inputs.target-env }}  
+      - name: create secret names
+        id: create-secret-names
+        run: |
+          export TARGET_ENV=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
+          if [ "$TARGET_ENV" = "PROD" ] || [ "$TARGET_ENV" = "STAGING" ]; then
+            echo "::set-output name=ARGOCD::AWS_${TARGET_ENV}_ARGOCD"
+          else
+            echo "::set-output name=ARGOCD::AWS_STAGING_OS_ARGOCD"
+          fi
+        env:
+          TARGET_ENV: ${{ github.event.inputs.target-env }}
   deploy:
     runs-on: ubuntu-18.04
     needs:
@@ -146,7 +147,7 @@ jobs:
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
           echo "$COMMAND"
           $COMMAND
-          
+
           #argocd create app
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS --upsert --sync-option Prune=true"
           COMMAND=$(echo $COMMAND|tr -d '\n')
@@ -161,4 +162,3 @@ jobs:
         env:
           ARGO_CD_PASSWORD: ${{ secrets[env.ARGOCD] }}
           TARGET_ENV: ${{ github.event.inputs.target-env }}
-      
