--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -44,10 +44,9 @@ jobs:
         run: |
           bash ./.github/workflows/scripts/deploy-image.sh
   prepare:
-    if: github.event.inputs.target-env == github.event.inputs.confirm-env
     runs-on: ubuntu-18.04
     needs: [validate-image]
-    if: ${{ needs.validate-image.outputs.image_exist == 'true' }}
+    if: github.event.inputs.target-env == github.event.inputs.confirm-env && ${{ needs.validate-image.outputs.image_exist == 'true' }}
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
     steps:
