--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -46,7 +46,7 @@ jobs:
   prepare:
     runs-on: ubuntu-18.04
     needs: [validate-image]
-    if: github.event.inputs.target-env == github.event.inputs.confirm-env && ${{ needs.validate-image.outputs.image_exist == 'true' }}
+    if: ${{ github.event.inputs.target-env == github.event.inputs.confirm-env }} && ${{ needs.validate-image.outputs.image_exist == 'true' }}
     outputs:
       ARGOCD: ${{ steps.create-secret-names.outputs.ARGOCD }}
     steps:
