--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -7,7 +7,7 @@ NODE_ENV=development
 POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
-SERVICE_DB_NAME=amplication-server
+SERVICE_DB_NAME=amplication-prisma-db
 
 # Nest 
 CORS_ENABLE=1
@@ -52,3 +52,5 @@ KAFKA_GROUP_ID='main-server-group'
 
 # BASE_BUILDS_FOLDER
 BASE_BUILDS_FOLDER=[path-to-local-folder]
+BUILD_CONTEXT_LOCATION='/home/eugene/build-contexts'
+GENERATE_RESOURCE_TOPIC='build.internal.generate-resource.event.0'
