--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -3,7 +3,7 @@
   "version": "0.14.1",
   "private": true,
   "dependencies": {
-    "@amplication/data": "^0.14.1",
+    "@amplication/code-gen-types": "^0.14.1",
     "@amplication/design-system": "^0.14.1",
     "@apollo/client": "3.3.16",
     "@extra-set/difference": "2.2.3",
