chore: rename temp folder

--- a/packages/amplication-git-pull-request-service/tsconfig.build.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.build.json
@@ -1,4 +1,11 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "builds", ".temp"]
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist",
+    "**/*spec.ts",
+    "builds",
+    ".amplication_temp"
+  ]
 }
