--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -14,4 +14,4 @@ KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
 
 # BASE_BUILDS_FOLDER 
-BASE_BUILDS_FOLDER=.temp
+BASE_BUILDS_FOLDER=.amplication_temp
